--- a/src/views/admin/users.ejs
+++ b/src/views/admin/users.ejs
@@ -9,6 +9,12 @@
           <a href="/admin/users/add" class="btn btn-primary">Add User</a>
         </div>
         <div class="card-body">
+          <% if (typeof successMessage !== 'undefined' && successMessage) { %>
+            <div class="alert alert-success alert-dismissible fade show" role="alert">
+              <%= successMessage %>
+              <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+            </div>
+          <% } %>
           <div class="table-responsive">
             <table class="table table-striped">
               <thead>
@@ -30,7 +36,7 @@
                       <td><%= new Date(user.created_at).toLocaleDateString() %></td>
                       <td>
                         <a href="/admin/users/<%= user.id %>/edit" class="btn btn-sm btn-warning">Edit</a>
-                        <form action="/admin/users/<%= user.id %>/delete" method="POST" style="display:inline;" onsubmit="return confirm('Are you sure you want to delete this user?');">
+                        <form action="/admin/users/<%= user.id %>/delete" method="POST" style="display:inline;" onsubmit="return confirm('Are you sure you want to delete this user? This will also delete any associated businesses and orders.');">
                           <button type="submit" class="btn btn-sm btn-danger ms-1">Delete</button>
                         </form>
                       </td>
