--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -9,7 +9,7 @@
       </p>
       
       <div class="row mt-5">
-        <div class="col-md-6">
+        <div class="col-md-4">
           <div class="card mb-4">
             <div class="card-body">
               <h5 class="card-title">For Businesses</h5>
@@ -18,8 +18,20 @@
             </div>
           </div>
         </div>
-        
-        <div class="col-md-6">
+        <div class="col-md-4">
+          <div class="card mb-4">
+            <div class="card-body">
+              <h5 class="card-title">For Users</h5>
+              <p class="card-text">Access your dashboard to manage your orders and deliveries.</p>
+              <% if (typeof userId !== 'undefined' && userId) { %>
+                <a href="/dashboard?userId=<%= userId %>" class="btn btn-success">Go to Dashboard</a>
+              <% } else { %>
+                <a href="/login" class="btn btn-success">User Login</a>
+              <% } %>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
           <div class="card mb-4">
             <div class="card-body">
               <h5 class="card-title">For Administrators</h5>
